# seamstress

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  webpack.config.js
src/: game_state.rs  lib.rs  prelude.rs  vertex.rs
src/boiler_plate/: mod.rs  render.rs  shader.glsl
