[package]
name = "seamstress"
version = "0.1.0"
authors = ["terepy"]
edition = "2018"

[profile.dev]
debug = 0

[profile.release]
lto = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.59"
sha3 = "0.9.1"
js-sys = "0.3.36"
console_error_panic_hook = "0.1.6"

[dependencies.web-sys]
version = "0.3.39"
features = [
	'console',
	'Blob',
	'CanvasRenderingContext2d',
	'Crypto',
	'Document',
	'DomRect',
	'Element',
	'EventListener',
	'EventTarget',
	'FileReader',
	'HtmlCanvasElement',
	'HtmlCollection',
	'HtmlElement',
	'HtmlInputElement',
	'HtmlImageElement',
	'HtmlSelectElement',
	'InputEvent',
	'KeyboardEvent',
	'Location',
	'MessageEvent',
	'MouseEvent',
	'Node',
	'Path2d',
	'Performance',
	'TextMetrics',
	'WebGl2RenderingContext',
	'WebGlContextAttributes',
	'WebGlBuffer',
	'WebGlProgram',
	'WebGlShader',
	'WebGlTexture',
	'WebGlUniformLocation',
	'WebSocket',
	'Window',
	'WheelEvent',
]

[dependencies.math_lib]
git = "https://github.com/pypypypypypypypypyp/math_lib"

[dependencies.array_tuple]
git = "https://github.com/pypypypypypypypypyp/array_tuple"
